<resources>
    <string name="app_name">LGBTQDictionary</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_text_home">Home</string>
    <string name="nav_text_categories">Categories</string>
    <string name="nav_text_bookmark">Bookmark</string>
    <string name="nav_text_settings">Settings</string>
    <string name="aboutAppDescription">LGBTQ Dictionary purpose is to provide accurate explanation on words that concern the LGBTQ community, to help bring understanding and knowledge and help people grow and accepted.</string>
    <string name="bookmarks_remove_all">remove all words from bookmarks</string>
    <string name="bookmarks_sort">sort bookmarked words in ascending or decreasing order</string>
    <string name="random_word_see">SEE DEFINITIONS</string>
    <string name="random_word_discovery">random discovery</string>
    <string name="bookmarked_arrow">an arrow indicating that this word can be clicked</string>
    <string name="bookmarked_remove">tap this trash can symbol to remove this bookmarked word</string>
    <string name="back_arrow">an arrow button to go back to previous screen</string>
    <string name="search_bar_hint">Search dictionary</string>
    <string name="search_icon">search-icon</string>
    <string name="app_logo_on_home_screen">App logo on Home screen</string>
    <string name="app_name_on_home_screen">App Name on Home screen</string>
    <string name="recent_searches_label">RECENT SEARCHES</string>
    <string name="word_arrow">word arrow</string>
    <string name="on_board_slide_image">on board slide image</string>
    <string name="on_board_next_btn">Next</string>
    <string name="settings_about">About</string>
    <string name="settings_about_icon">About icon</string>
    <string name="settings_share_this_app">Share This App</string>
    <string name="settings_share_icon">Share All icon</string>
    <string name="settings_toggle_dark_mode">Toggle Dark Mode</string>
    <string name="settings_toggle_dark_mode_icon">Toggle dark mode icon</string>
    <string name="app_logo_in_about_screen">app logo in about screen</string>
    <string name="about_email">lgbtqdictionary2021@gmail.com</string>
    <string name="about_version">Version 1.0.0</string>
    <string name="about_copyright">2021 Hue Nguyen. All Rights Reserved.</string>
    <string name="app_text_logo_in_about_screen">app text logo in about screen</string>
    <string name="about_email_icon">about_email_icon</string>
    <string name="about_version_icon">about version icon</string>
    <string name="about_copyright_icon">about copyright icon</string>
    <string name="settings_change_sound_speed_icon">settings change sound speed icon</string>
    <string name="sound_speed">Sound Speed</string>
    <string name="sound_speed_slower">Slower</string>
    <string name="sound_speed_slow">Slow</string>
    <string name="sound_speed_normal">Normal</string>
    <string name="sound_accent">Sound Accent</string>
    <string name="sound_accent_icon_uk_or_us">sound accent icon, uk or us</string>
    <string name="sound_accent_uk">UK</string>
    <string name="sound_accent_us">US</string>
    <string name="report_bug_or_suggestions">Report bugs or suggestions</string>
    <string name="report_bug_or_send_suggestion_icon">report bug or send suggestion icon</string>
    <string name="settings_toggle_auto_rotation">Toggle Auto Rotation</string>
    <string name="settings_toggle_auto_rotation_icon">toggle auto rotation icon</string>
    <string name="home_recent_searches_label">RECENT SEARCHES</string>
    <string name="word_definition">Definition</string>
    <string name="word_offensive">Is it Offensive?</string>
    <string name="word_flag">Flag</string>
    <string name="word_hear">tap icon to listen to pronunciation</string>
    <string name="word_bookmark_icon">tap icon to add this word to bookmarks. Tap again to remove it</string>
    <string name="word_flag_img">flag of this gender community</string>
    <string name="category_image">Category Image</string>
</resources>