<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_splash_bg"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHeaderArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivBackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            app:layout_constraintEnd_toStartOf="@+id/etSearchBox"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_main_back_arrow_24"
            android:contentDescription="@string/back_arrow" />

        <EditText
            android:id="@+id/etSearchBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box_outline"
            android:hint="@string/search_bar_hint"
            android:inputType="text"
            android:paddingVertical="5dp"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:textColor="#5C5C5C"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ivBackBtn"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/etSearchBox"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/search_icon"
            app:layout_constraintBottom_toBottomOf="@+id/etSearchBox"
            app:layout_constraintEnd_toEndOf="@+id/etSearchBox"
            app:layout_constraintTop_toTopOf="@+id/etSearchBox"
            app:srcCompat="@drawable/ic_search_18" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:id="@+id/flFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clHeaderArea" />

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#4AAAA6"
        app:cnb_menuResource="@menu/bottom_nav_bar"
        app:cnb_unselectedColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/flFragmentContainer" />




</androidx.constraintlayout.widget.ConstraintLayout>